<resources>
    <string name="app_name">QuietFrame</string>
    <string name="username_email">Username/Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="change_password">Change Password</string>
    <string name="token">Token</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_info">Account Info</string>
    <string name="download_cnn_image">Download CNN Image</string>
    <string name="download_total_variation_image">Download Total Variation Image</string>
    <string name="add_image_to_be_denoised">Add image to be denoised</string>
    <string name="download_all_results">Download all results</string>

    <string-array name="image_format_entries">
        <item>JPEG</item>
        <item>PNG</item>
        <item>WEBP</item>
    </string-array>

    <string-array name="image_format_values">
        <item>jpg</item>
        <item>png</item>
        <item>webp</item>
    </string-array>
</resources>