<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChangePasswordActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#B300162E" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/logo1" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edit_text"
                android:drawableLeft="@drawable/username_email"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:textColor="@color/tiffany_blue"
                android:textColorHint="@color/tiffany_blue" />

            <EditText
                android:id="@+id/editTextToken"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edit_text"
                android:drawableLeft="@drawable/token"
                android:drawablePadding="8dp"
                android:hint="@string/token"
                android:inputType="text"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:textColor="@color/tiffany_blue"
                android:textColorHint="@color/tiffany_blue" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edit_text"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:textColor="@color/tiffany_blue"
                android:textColorHint="@color/tiffany_blue" />

            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edit_text"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="8dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:textColor="@color/tiffany_blue"
                android:textColorHint="@color/tiffany_blue" />

            <Button
                android:id="@+id/buttonChangePassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:backgroundTint="@color/tiffany_blue"
                android:text="@string/change_password"
                android:textColor="@color/gummetal" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>