<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#B300162E" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/logo1" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edit_text"
                android:drawableLeft="@drawable/username_email"
                android:drawablePadding="8dp"
                android:hint="@string/username_email"
                android:inputType="textPersonName"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:textColor="@color/tiffany_blue"
                android:textColorHint="@color/tiffany_blue" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_edit_text"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:textColor="@color/tiffany_blue"
                android:textColorHint="@color/tiffany_blue" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10dp"
                android:backgroundTint="@color/tiffany_blue"
                android:onClick="loginOnClick"
                android:text="@string/login"
                android:textColor="@color/gummetal" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:onClick="forgotPasswordClicked"
                android:text="Forgot password?"
                android:textColor="@color/tiffany_blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OR"
                android:textColor="@color/gummetal" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Not a member? "
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:onClick="signUpClicked"
                    android:text="Sign up"
                    android:textColor="@color/tiffany_blue" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>